removed scrollbar bug

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,11 @@
 body {
+
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  overflow-y: scroll;
   font-family: sans-serif;
+
+  // removes scrollbar bug when select or dialog opens
+  padding-right: 0 !important;
+  overflow-y: scroll !important;
 }
